# zelda-nca

./: .gitignore  pyproject.toml
conf/: config.yaml
conf/data/: zelda.yaml
conf/eval/: default.yaml
conf/model/: nca.yaml  unet.yaml
conf/train/: default.yaml
data/processed/: rooms.npz
scripts/: check_setup.py  evaluate.py  prepare_data.py  train.py
src/: tiles.py
src/damage/: stochastic.py  targeted.py
src/data/: augment.py  dedup.py  splits.py  symmetry.py  vglc.py
src/eval/: runner.py
src/metrics/: connectivity.py
src/models/: aux_targets.py  encoding.py  factory.py  nca.py  unet.py
src/train/: pool.py  trainer.py
tests/: test_augment.py  test_aux_targets.py  test_connectivity.py  test_dedup.py  test_encoding.py  test_nca.py  test_pool.py  test_splits.py  test_stochastic.py  test_targeted.py  test_tiles.py  test_trainer.py  test_unet.py  test_vglc.py
